# qtquick-videotexture

./: VideoTexture-1.0.4.tar.bz2
VideoTexture-1.0.4/: CMakeLists.txt  videotexture.qmldir
VideoTexture-1.0.4/.pc/: applied-patches
VideoTexture-1.0.4/.pc/remove-qtgstreamer-dependency.patch/: CMakeLists.txt
VideoTexture-1.0.4/example/: main.cpp  main.py  main.qml  player.cpp  player.h
VideoTexture-1.0.4/include/: videotexture.h  videotextureitem.h  videotextureplugin.h
VideoTexture-1.0.4/patches/: remove-qtgstreamer-dependency.patch  series
VideoTexture-1.0.4/source/: videotexture.cpp  videotextureitem.cpp  videotextureplugin.cpp
